--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,20 +1,21 @@
 body {
-  margin: 0 auto;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-.center {
+  height: 100%;
+  font-family: "Inconsolata", sans-serif;
+  font-size: 15px;
+  line-height: 1.5;
+  background: #0B0C10;
+  color: #C5C6C7;
   text-align: center;
-  margin: auto;
-  width: 60%;
-  padding: 10px;
+  margin: 0;
+}
+
+.centerBody {
+  max-width: 1200px;
+  background: #1F2833;
+  margin: 20px auto;
+  padding: 20px;
+}
+
+h1.title {
+  color: #66FCF1;
 }
